# tbds-demos

5-underrated-pandas-techniques/: data.csv  techniques_eda_pandas.ipynb
5-underrated-pandas-techniques/.ipynb_checkpoints/: techniques_eda_pandas-checkpoint.ipynb
data-science-sample-project/: AGENTS.md  Makefile  README.md  pyproject.toml
data-science-sample-project/data_science_sample_project/: __init__.py  dataset.py  features.py  plots.py
data-science-sample-project/data_science_sample_project/modeling/: predict.py  train.py
data-science-sample-project/docs/: mkdocs.yml
data-science-sample-project/docs/docs/: index.md
deploying_with_strealit_and_docker/: Dockerfile
gentle-introduction-huggingface-transformers/: huggingface_transformers_library.ipynb
lightweigth-data-cleaning-agent/: Makefile  README.md  pyproject.toml
lightweigth-data-cleaning-agent/data_cleaning_agent/: data_cleaning_agent.py
streamlit-dashboard/: Dockerfile  Makefile  README.md  app.py
survival-analysis-explained/: survival_analyis_explained.ipynb
testing-pandasai/: .env.example  .gitignore  README.md  benchmark_rfm.py  example.py  generate_synthetic_rfm.py  pyproject.toml  test_rfm_data.py  test_rfm_data_interactive.py
testing-pandasai/data/: rfm_segmented_10k.csv  rfm_segmented_20k.csv
