[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "data_science_sample_project"
version = "0.0.1"
description = "This is a sample Data Science project"
authors = [
  { name = "Andres Vourakis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["data_science_sample_project"]
force_sort_within_sections = true


